--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-  <script src='assets/js/vendor/jQuery.js' defer></script>
+  <!-- <script src='assets/js/vendor/jQuery.js' defer></script>
   <script src='assets/js/vendor/bootstrap.js' defer></script>
-  <script src='dist/script.min.js' defer></script>
+  <script src='dist/script.min.js' defer></script> -->
+  <script src="./dist/main.bundle.js" defer></script>
 
 </head>
 <body>
